--- a/demos/react-ts/package.json
+++ b/demos/react-ts/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aieditor": "^1.0.0-beta.4",
+    "jsteditor": "^1.0.0-beta.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
