--- a/demos/vue-ts/package.json
+++ b/demos/vue-ts/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aieditor": "^1.0.0-beta.4",
+    "jsteditor": "^1.0.0-beta.4",
     "vue": "^3.3.8"
   },
   "devDependencies": {
