--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsteditor",
   "author": "hh",
-  "version": "1.0.4",
+  "version": "1.1.2",
   "type": "module",
   "keywords": [
     "editor",
@@ -83,7 +83,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jsteditor-team/jsteditor"
+    "url": "git+https://github.com/jsteditor-team/jsteditor.git"
   },
   "bugs": {
     "url": "https://github.com/jsteditor-team/jsteditor/issues"
